# online-tagger

./: .gitignore  CMakeLists.txt  README.md
conf/people.daily/postag/: complete.cfg  complete.gbk.cfg  postag.cfg
conf/people.daily/segment/: complete.cfg  complete.gbk.cfg  wordseg.cfg
include/: otpos_dll.h  otws_dll.h  segment.h
src/: CMakeLists.txt  ap-trainer.cpp  data.h  decoder.h  def.h  model.cpp  online-learner.cpp  parameter.h  pos-decoder.cpp  pos-evaluator.cpp  pos-evaluator.h  pos-extractor.cpp  pos-extractor.h  pos-reader.cpp  postag-evaluator.cpp  seg-decoder.cpp  seg-decoder.h  seg-evaluator.cpp  seg-extractor.cpp  seg-extractor.h  seg-reader.cpp  seg-reader.h  segment-extractor.cpp  tagger-evaluator.h  tagger-reader.h  trainer.h
src/core/: ap-trainer.cpp  ap-trainer.h  c-data.cpp  c-data.h  c-parameter.cpp  c-parameter.h  cpp-data.cpp  cpp-data.h  hash-alphabet.cpp  hash-parameter.cpp  hash-parameter.h  index-builder.cpp  index-builder.h  mira-trainer.cpp  mira-trainer.h  model.cpp  model.h  online-learner.cpp  online-learner.h  online-tagger.cpp  online-tagger.h  pos-decoder.cpp  pos-decoder.h  seg-decoder.cpp  seg-decoder.h
src/demo/dump_crfsuite/: main.cpp
src/demo/frontend/: learn.cpp  main.cpp  tag.cpp
src/demo/postag/: learn.cpp  otpos_dll.cpp  otpos_dll.h  tag.cpp
src/demo/segment/: learn.cpp  main.cpp  otws_dll.cpp  tag.cpp
src/framework/: ltp-alphabet.h  ltp-data.h  ltp-evaluator.h  ltp-extractor.h  ltp-trainer.h
src/include/internal/framework/: ltp-corpus.h  ltp-data.h  ltp-decoder.h  ltp-model.h  ltp-parameter.h  ltp-reader.h
src/include/internal/math/: ltp-math-const.h
src/include/internal/tagger/: alphabet.h  corpus.h  data.h  index-builder.h  learner.h  model.h  online-learner.h  postag-extractor.h  postag-reader.h  segment-evaluator.h  segment-extractor.h  segment-reader.h
src/include/internal/utils/: cppstrlib.h  cstrlib.h  gbk.h  k-heap.h  k-heap2.h  ltp-configure.h  ltp-log.h
src/lib/tagger/: alphabet.cpp  corpus.cpp  data.cpp  decoder.cpp  index-builder.cpp  model.cpp  online-learner.cpp  online-tagger.cpp  parameter.cpp  postag-evaluator.cpp  postag-extractor.cpp  segment-evaluator.cpp  segment-extractor.cpp  segment-reader.cpp  tagger-evaluator.cpp  trainer.cpp
src/lib/utils/: ltp-argtable.cpp  ltp-configure.cpp  ltp-log.cpp
src/math/: ltp-math.h
src/test/: test-heap2.cpp  test-math.cpp
src/utils/: cppstrlib.cpp  gbk.h  ltp-argtable.cpp  ltp-argtable.h  utf.h
test/: CMakeLists.txt  postag.cpp  test-heap.cpp  test-log.cpp  wordseg.cpp
